@@ -5,6 +5,7 @@
 - fix left mount count return from umount_multi_triggers().
 - fix return handling in sss lookup module.
 - move query dn calculation from do_bind() to do_connect().
+- make do_connect() return a status.
 
 21/04/2015 autofs-5.1.1
 =======================
